# Auto-Tempo-Detection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/source/: Main.cpp  MainComponent.cpp
include/: .gitkeep
plugin/: CMakeLists.txt
plugin/include/AudioProjectWorkgroup/: ButtonLookAndFeel.h  CustomButton.h  CustomLookAndFeel.h  Display.h  PluginEditor.h  PluginProcessor.h
plugin/include/AudioProjectWorkgroup/tempo/: beatrack.h  interface.h  tracker.h
plugin/source/: ButtonLookAndFeel.cpp  CustomButton.cpp  CustomLookAndFeel.cpp  Display.cpp  PluginEditor.cpp  PluginProcessor.cpp
plugin/source/tempo/: beatrack.cpp  interface.cpp
test/: CMakeLists.txt  allTests.cpp  applicationTests.h  pluginTests.h
test/source/: AudioProcessorTest.cpp
test/src/: audioProcessorTests.cpp  mainComponentTests.cpp
